5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1644_2703.log
== TEST (2019-04-09 16:44:24) 
-- CODE:
idade = input("qual a idade ?:")

-- OUTPUT:
impar
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:44:35) 
-- CODE:
idade = input("qual a idade ?:")

-- EXECUTION TIME:
0.209228
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:

-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:

-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:47:46) 
-- CODE:
idade = input("qual a idade ?:")
if (idade >=18) :
			print("eleitor")

else:
	print("nao_eleitor")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if (idade >=18) :
TypeError: '>=' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:48:09) 
-- CODE:
idade = input("qual a idade ?:")
if (idade >=18) :
			print("eleitor")

else:
	print("nao_eleitor")
	

-- EXECUTION TIME:
0.130474
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2703/main.py", line 2, in <module>
    if (idade >=18) :
TypeError: unorderable types: str() >= int()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:48:10) 
-- CODE:
idade = input("qual a idade ?:")
if (idade >=18) :
			print("eleitor")

else:
	print("nao_eleitor")
	

-- EXECUTION TIME:
0.230854
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2703/main.py", line 2, in <module>
    if (idade >=18) :
TypeError: unorderable types: str() >= int()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:48:11) 
-- CODE:
idade = input("qual a idade ?:")
if (idade >=18) :
			print("eleitor")

else:
	print("nao_eleitor")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if (idade >=18) :
TypeError: '>=' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:48:11) 
-- CODE:
idade = input("qual a idade ?:")
if (idade >=18) :
			print("eleitor")

else:
	print("nao_eleitor")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if (idade >=18) :
TypeError: '>=' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:49:51) 
-- CODE:
idade = input("qual a idade ?:")
if (idade >=18) :
	print("eleitor")

else:
	print("nao_eleitor")
		
	

-- EXECUTION TIME:
0.15122
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2703/main.py", line 2, in <module>
    if (idade >=18) :
TypeError: unorderable types: str() >= int()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:49:52) 
-- CODE:
idade = input("qual a idade ?:")
if (idade >=18) :
	print("eleitor")

else:
	print("nao_eleitor")
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if (idade >=18) :
TypeError: '>=' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:50:24) 
-- CODE:
idade = int(input("qual a idade ?:")
if (idade >=18) :
	print("eleitor")

else:
	print("nao_eleitor")
		
	

-- EXECUTION TIME:
0.196411
-- ERROR:
  File "/home/codebench/codes/1644/2703/main.py", line 2
    if (idade >=18) :
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:50:25) 
-- CODE:
idade = int(input("qual a idade ?:")
if (idade >=18) :
	print("eleitor")

else:
	print("nao_eleitor")
		
	

-- ERROR:
File "XXXX", line 2
    if (idade >=18) :
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:50:33) 
-- CODE:
idade = int(input("qual a idade ?:")
if (idade >=18):
	print("eleitor")

else:
	print("nao_eleitor")
		
	

-- EXECUTION TIME:
0.145861
-- ERROR:
  File "/home/codebench/codes/1644/2703/main.py", line 2
    if (idade >=18):
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:50:34) 
-- CODE:
idade = int(input("qual a idade ?:")
if (idade >=18):
	print("eleitor")

else:
	print("nao_eleitor")
		
	

-- EXECUTION TIME:
0.121511
-- ERROR:
  File "/home/codebench/codes/1644/2703/main.py", line 2
    if (idade >=18):
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:50:34) 
-- CODE:
idade = int(input("qual a idade ?:")
if (idade >=18):
	print("eleitor")

else:
	print("nao_eleitor")
		
	

-- ERROR:
File "XXXX", line 2
    if (idade >=18):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:51:10) 
-- CODE:
idade = int(input("qual a idade ?:")
if (idade >=18):
	print("eleitor")

else:
		print("nao_eleitor")
		
	

-- EXECUTION TIME:
0.164088
-- ERROR:
  File "/home/codebench/codes/1644/2703/main.py", line 2
    if (idade >=18):
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:51:10) 
-- CODE:
idade = int(input("qual a idade ?:")
if (idade >=18):
	print("eleitor")

else:
		print("nao_eleitor")
		
	

-- ERROR:
File "XXXX", line 2
    if (idade >=18):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:51:15) 
-- CODE:
idade = int(input("qual a idade ?:")
if (idade >=18):
	print("eleitor")

else:
	print("nao_eleitor")
		
	

-- EXECUTION TIME:
0.19441
-- ERROR:
  File "/home/codebench/codes/1644/2703/main.py", line 2
    if (idade >=18):
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:51:16) 
-- CODE:
idade = int(input("qual a idade ?:")
if (idade >=18):
	print("eleitor")

else:
	print("nao_eleitor")
		
	

-- ERROR:
File "XXXX", line 2
    if (idade >=18):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:51:17) 
-- CODE:
idade = int(input("qual a idade ?:")
if (idade >=18):
	print("eleitor")

else:
	print("nao_eleitor")
		
	

-- ERROR:
File "XXXX", line 2
    if (idade >=18):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:51:24) 
-- CODE:
idade = int(input("qual a idade ?:")
if (idade >=18):
	print("eleitor")

else:
	print("nao_eleitor")
		
	

-- ERROR:
File "XXXX", line 2
    if (idade >=18):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:51:53) 
-- CODE:
idade = int(input("qual a idade ?:")
if (idade >= 18):
	print("eleitor")

else:
	print("nao_eleitor")
		
	

-- EXECUTION TIME:
0.143701
-- ERROR:
  File "/home/codebench/codes/1644/2703/main.py", line 2
    if (idade >= 18):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:51:54) 
-- CODE:
idade = int(input("qual a idade ?:")
if (idade >= 18):
	print("eleitor")

else:
	print("nao_eleitor")
		
	

-- EXECUTION TIME:
0.127539
-- ERROR:
  File "/home/codebench/codes/1644/2703/main.py", line 2
    if (idade >= 18):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:51:55) 
-- CODE:
idade = int(input("qual a idade ?:")
if (idade >= 18):
	print("eleitor")

else:
	print("nao_eleitor")
		
	

-- ERROR:
File "XXXX", line 2
    if (idade >= 18):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:52:32) 
-- CODE:
idade = int(input("qual a idade ?:")
if (idade >= 18):
	print('eleitor')

else:
	print('nao_eleitor')
		
	

-- ERROR:
File "XXXX", line 2
    if (idade >= 18):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:52:33) 
-- CODE:
idade = int(input("qual a idade ?:")
if (idade >= 18):
	print('eleitor')

else:
	print('nao_eleitor')
		
	

-- ERROR:
File "XXXX", line 2
    if (idade >= 18):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:52:35) 
-- CODE:
idade = int(input("qual a idade ?:")
if (idade >= 18):
	print('eleitor')

else:
	print('nao_eleitor')
		
	

-- EXECUTION TIME:
0.19564
-- ERROR:
  File "/home/codebench/codes/1644/2703/main.py", line 2
    if (idade >= 18):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:52:35) 
-- CODE:
idade = int(input("qual a idade ?:")
if (idade >= 18):
	print('eleitor')

else:
	print('nao_eleitor')
		
	

-- ERROR:
File "XXXX", line 2
    if (idade >= 18):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:52:35) 
-- CODE:
idade = int(input("qual a idade ?:")
if (idade >= 18):
	print('eleitor')

else:
	print('nao_eleitor')
		
	

-- EXECUTION TIME:
0.161976
-- ERROR:
  File "/home/codebench/codes/1644/2703/main.py", line 2
    if (idade >= 18):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:52:36) 
-- CODE:
idade = int(input("qual a idade ?:")
if (idade >= 18):
	print('eleitor')

else:
	print('nao_eleitor')
		
	

-- ERROR:
File "XXXX", line 2
    if (idade >= 18):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:52:44) 
-- CODE:
idade = int(input("qual a idade ?:"))
if (idade >= 18):
	print('eleitor')

else:
	print('nao_eleitor')
		
	

-- EXECUTION TIME:
0.122812
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
